--- a/1Sobre.html
+++ b/1Sobre.html
@@ -93,9 +93,10 @@
 
             <div id="bg-image">
 
-                <p class="display-4 text-center my-5 text-body-emphasis"> <img class="img-fluid" src="img/lampada-sem-fundo.png" alt="LampMarca"> UM POUCO SOBRE NÓS</p>
+                <p class="display-4 text-center my-5 text-body-emphasis"> <img class="img-fluid"
+                        src="img/lampada-sem-fundo.png" alt="LampMarca"> UM POUCO SOBRE NÓS</p>
 
-                <div class="container-fluid text-center">   
+                <div class="container-fluid text-center">
 
                     <div class="container bg-body-secondary  bg-opacity-25">
                         <div class="row justify-content-around">
@@ -110,8 +111,11 @@
                                 <hr>
                                 <p class="txt-complete lead">
                                     Ao enfrentar a realidade local, notei que a carência de conhecimento sobre o
-                                    desenvolvimento econômico em regiões com poucas oportunidades é um desafio significativo. Muitos optam por empreender por conta própria, estabelecendo pequenos negócios diante da escassez.
-                                    Inicialmente, minha proposta era criar ferramentas para impulsionar esse crescimento nos empreendimentos locais.
+                                    desenvolvimento econômico em regiões com poucas oportunidades é um desafio
+                                    significativo. Muitos optam por empreender por conta própria, estabelecendo pequenos
+                                    negócios diante da escassez.
+                                    Inicialmente, minha proposta era criar ferramentas para impulsionar esse crescimento
+                                    nos empreendimentos locais.
                                 </p>
                                 <hr>
                             </div>
@@ -129,7 +133,8 @@
 
                                     Em cidades do interior, as necessidades dos moradores muitas vezes são atendidas em
                                     localidades vizinhas. Para facilitar o transporte informal prestado por motoristas
-                                    locais, proponho a criação de um aplicativo de caronas, tornando esse serviço mais prático e acessível à população que realiza esse trajeto diariamente.
+                                    locais, proponho a criação de um aplicativo de caronas, tornando esse serviço mais
+                                    prático e acessível à população que realiza esse trajeto diariamente.
                                 </p>
                                 <hr>
                             </div>
@@ -155,7 +160,10 @@
                                 <p class="txt-complete lead">
 
                                     Sempre achei que um dos problemas da comunidade fosse a falta de orientação para o
-                                    futuro dos jovens, que muitas vezes estão indecisos sobre carreiras ou transição para a vida adulta. Uma solução seria um projeto digital com opções apresentadas por mentores, como um aplicativo ou site com vídeos, mini games e testes de aptidão para tornar o processo mais atrativo e eficiente.
+                                    futuro dos jovens, que muitas vezes estão indecisos sobre carreiras ou transição
+                                    para a vida adulta. Uma solução seria um projeto digital com opções apresentadas por
+                                    mentores, como um aplicativo ou site com vídeos, mini games e testes de aptidão para
+                                    tornar o processo mais atrativo e eficiente.
 
                                 </p>
                                 <hr>
@@ -186,7 +194,8 @@
                         </div>
                     </div>
 
-                    <h3 id="surgimento" class=" display-4 text-center text-body-emphasis my-5" > <img class="img-fluid" src="img/lampada-sem-fundo.png" alt="LampMarca">COMO SURGIU O PROJETO</h3>
+                    <h3 id="surgimento" class=" display-4 text-center text-body-emphasis my-5"> <img class="img-fluid"
+                            src="img/lampada-sem-fundo.png" alt="LampMarca">COMO SURGIU O PROJETO</h3>
 
                     <div class="container bg-body-secondary bg-opacity-25 mb-5 text-center ">
 
@@ -199,14 +208,16 @@
                             <div class="objet-complete text-start col-lg-5 m-5 ">
                                 <hr>
                                 <p class="lead">
-                                    Com base em todos os depoimentos que foram feitos sobre problemas e soluções, nasceu o <span class="fw-bold"> Projeto Infor Mei </span>  que leva conhecimento de maneira simplificada acerca de gestão de negócios.
+                                    Com base em todos os depoimentos que foram feitos sobre problemas e soluções, nasceu
+                                    o <span class="fw-bold"> Projeto Infor Mei </span> que leva conhecimento de maneira
+                                    simplificada acerca de gestão de negócios.
                                 </p>
                                 <hr>
                             </div>
 
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
         </main>
@@ -216,12 +227,12 @@
 
             </div>
         </footer>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-
-            </script>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+
+        </script>
+
 </body>
 
 
